# piper

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: README.md  _navbar.md  design.md  index.html
example/: config.yaml
example/templates/: Subject.j2  SubjectAssertion.j2  subject.j2
example/templates/macros/: codeable_concept.j2
src/piper/: __init__.py  _version.py  config.py  exceptions.py  extract.py  harmony.py  linkml.py  projection_consumers.py  template_manager.py  template_projector.py  transform.py
src/piper/datamodel/: __init__.py  linkml.py
src/piper/fhir_consumers/: __init__.py  consumer_fhir_validate.py  dewrangle.py  fhir_validation.py  hl7_validation.py  ig_validation.py  summary.py  utils.py
src/piper/transform/: __init__.py
