[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "Piper"
authors = [
  { name = "Eric Torstenson", email = "eric.s.torstenson@vumc.org" },
  { name = "Yelena Cox", email="yelena.cox@vumc.org"}
]
description = "Extract data from RDB, transform, Validate and load to FHIR."
readme = "README.md"
requires-python = ">=3.13"

dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
  "rich",
  "linkml>=1.9.1",
  "PyYAML",
  "duckdb",
  "psycopg[binary]"
]

[project.optional-dependencies]
dev = [
    "rich",
    "pytest",
]

[tool.setuptools_scm]
version_file = "src/piper/_version.py"



[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
play = "piper.transform:run"
